[project]
name = "ggce"
authors = [
    {"name" = "Matthew R. Carbone", "email" = "mcarbone@bnl.gov"},
    {"name" = "Stepan Fomichev", "email" = "fomichev@physics.ubc.ca"}
]
maintainers = [
    {"name" = "Matthew R. Carbone", "email" = "mcarbone@bnl.gov"},
    {"name" = "Stepan Fomichev", "email" = "fomichev@physics.ubc.ca"}
]
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.3",
    "monty>=2024.10.21",
    "numpy<1.24",
    "scipy>=1.13.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
test = [
    "codecov>=2.1.13",
    "coverage>=7.6.9",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "ggce/_version.py"


[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 60
exclude = ["ggce/_version.py"]
